# Acousent

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
CMakeConfigFiles/: root_directory.h.in
Examples/: CMakeLists.txt  MIDI_Lecture.cpp  MIDI_example.cpp  MIDI_example2.cpp  files_info.cpp  midi_lecture1.cpp  midi_lecture2.cpp  midi_lecture3.cpp  midi_playback.cpp  soundfont_notes.cpp  top_down.cpp
Resources/Audio/MIDI/: midi_example.mid  tracks.mid  tracks2.mid
Resources/Config/: distribution.json  distribution2.json
Resources/Models/Auditorium/: license.txt  scene.gltf
Resources/Models/Instruments/Accordion/: instruments.mtl
Resources/Models/Instruments/Bagpipes/: instruments.mtl
Resources/Models/Instruments/BassGuitar/: instruments.mtl
Resources/Models/Instruments/Drums/: instruments.mtl
Resources/Models/Instruments/ElectricGuitar/: instruments.mtl
Resources/Models/Instruments/Guitar/: instruments.mtl
Resources/Models/Instruments/Marimba/: instruments.mtl
Resources/Models/Instruments/Piano/: instruments.mtl
Resources/Models/Instruments/Speaker/: instruments.mtl
Resources/Models/Instruments/Synth/: instruments.mtl
Resources/Models/Instruments/Violin/: instruments.mtl
Resources/Models/Piano/: license.txt  scene.gltf
Resources/Models/Seat/: license.txt  scene.gltf
Resources/Models/Speaker/: license.txt  scene.gltf
Resources/Models/Theater/: license.txt  scene.gltf
Resources/Models/guitar/: license.txt  scene.gltf
Resources/Shaders/: default.vs
source/: CMakeLists.txt  SoundLibrary.cpp  SoundSource.cpp  TopDown.h  imgui-style.h  main.cpp  utils.cpp
source/Audio/: SoundDevice.cpp  SoundDevice.h  SoundLibrary.cpp  SoundLibrary.h  SoundSource.cpp  SoundSource.h
source/Core/: Application.cpp  Application.h  Camera.cpp  FileSystem.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  TopDown.h  Window.cpp  Window.h  camera.h  filesystem.h  lightSource.cpp  lightSource.h  utils.h
source/Objects/: Instrument.cpp  Instrument.h  Listener.cpp  Listener.h  Object.cpp  Object.h  Seat.cpp  Seat.h  SeatCoords.h  Speaker.cpp  Speaker.h
source/Rendering/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
